@@ -6,7 +6,14 @@
  totally. The file is provided AS IS and is probably completely unreadable.
 
 -----------------------------------------------------------------------------
+May 11 2005 Heikki Sairanen <heikki.sairanen@gmail.com>
 
+  * Some code related to mind worms added. Sadly the code hardly functions.	
+
+May 11 2005 Heikki Sairanen <heikki.sairanen@gmail.com>
+
+  * Gorovits family life-size copy of Lenin's mummy added
+	
 May 10 2005 Timo Kiviluoto <holybanana@users.sourceforge.net>
 
   * An additional abstract base template for trap items
